@@ -479,7 +479,6 @@
 #endif
 
 #if PLATFORM(BLACKBERRY)
-#define ENABLE_DRAG_SUPPORT 0
 #define USE_SYSTEM_MALLOC 1
 #define WTF_USE_MERSENNE_TWISTER_19937 1
 #define WTF_USE_SKIA 1
